Add a new layout for posts

--- a/_posts/releases/2014-09-26-v2.7.0.0.md
+++ b/_posts/releases/2014-09-26-v2.7.0.0.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 version: 2.7.0.0
 categories:
 - releases
@@ -8,4 +9,20 @@ packages:
   mac: BNFC-2.7.0.0-mac.pkg
   source: BNFC-2.7.0.0.tar.gz
   win: bnfc-2.7.0.0-win.exe
+
 ---
+
+* Add token support for Ocaml
+* New option parser
+* Adds an optional argument to change Makefile name
+* Add a --ghc option to derive Data, Typeable, Generic in Haskell
+* New online documentation (https://bnfc.readthedocs.org)
+* Derive ``Read`` for newtype decls in Haskell
+* New option to get the version number --version
+* Remove the F# backend
+* Remove the Java4 backend
+* New Applicative and Alternative instances to ``Err``
+* Remove the coupling between building the parser and the pdf from
+  latex
+* Improvement to the CNF Backend
+* Bug fixes #92, #21, #34, #33, #90, #30, #60
