--- a/_posts/releases/2014-09-26-v2.7.0.1.md
+++ b/_posts/releases/2014-09-26-v2.7.0.1.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 version: 2.7.0.1
 categories:
 - releases
@@ -9,3 +10,5 @@ packages:
   source: BNFC-2.7.0.1.tar.gz
   win: bnfc-2.7.0.1-win.exe
 ---
+
+* Fix problem with the latest version of alex
