[ release notes ] links to github issues

--- a/_posts/releases/2018-11-04-v2.8.2.md
+++ b/_posts/releases/2018-11-04-v2.8.2.md
@@ -6,23 +6,23 @@ categories:
 packages:
   source: BNFC-2.8.2.tar.gz
 ---
-* GHC 8.4 compatibility [#227,#236]
-* bnfc now puts current timestamp on all created files, even unchanged ones [#219]
-* bnfc is now more accepting about border-line terminals [#149]
-* Improved error messages [#144] in particular on undefined categories [#151]
-* C: Emit correct function prototypes [#185]
-* C++: Fix buffer overrun in pretty printer [#242]
-* C++: Fix regression introduced in 2.8 in Skeleton.H [#164]
-* C++: Replace `%name-prefix` with `%define api.prefix` in bison files [#181]
+* GHC 8.4 compatibility [[#227](https://github.com/BNFC/bnfc/issues/227),[#236](https://github.com/BNFC/bnfc/issues/236)]
+* bnfc now puts current timestamp on all created files, even unchanged ones [[#219](https://github.com/BNFC/bnfc/issues/219)]
+* bnfc is now more accepting about border-line terminals [[#149](https://github.com/BNFC/bnfc/issues/149)]
+* Improved error messages [[#144](https://github.com/BNFC/bnfc/issues/144)] in particular on undefined categories [[#151](https://github.com/BNFC/bnfc/issues/151)]
+* C: Emit correct function prototypes [[#185](https://github.com/BNFC/bnfc/issues/185)]
+* C++: Fix buffer overrun in pretty printer [[#242](https://github.com/BNFC/bnfc/issues/242)]
+* C++: Fix regression introduced in 2.8 in Skeleton.H [[#164](https://github.com/BNFC/bnfc/issues/164)]
+* C++: Replace `%name-prefix` with `%define api.prefix` in bison files [[#181](https://github.com/BNFC/bnfc/issues/181)]
 * C++: Fix a bug that appeared if you had a category named "List"
-* C, C++: Add usage output to the test program [#141]
-* C, C++: Fix a bug in the parser file when using -p [#172]
-* C, C++, OCaml, Java: Accept ' or " as comment delimiters [#146]
+* C, C++: Add usage output to the test program [[#141](https://github.com/BNFC/bnfc/issues/141)]
+* C, C++: Fix a bug in the parser file when using -p [[#172](https://github.com/BNFC/bnfc/issues/172)]
+* C, C++, OCaml, Java: Accept ' or " as comment delimiters [[#146](https://github.com/BNFC/bnfc/issues/146)]
 * Haskell: Generated code mostly hlint-warning free
-* Haskell: Small fixes [#166,#170,#222]
-* Java: Add an experimental ANTLR4 backend [#155]
-* Java: Add support for passing line numbers to parser [#217,#224,#226]
+* Haskell: Small fixes [[#166](https://github.com/BNFC/bnfc/issues/166),[#170](https://github.com/BNFC/bnfc/issues/170),[#222](https://github.com/BNFC/bnfc/issues/222)]
+* Java: Add an experimental ANTLR4 backend [[#155](https://github.com/BNFC/bnfc/issues/155)]
+* Java: Add support for passing line numbers to parser [[#217](https://github.com/BNFC/bnfc/issues/217),[#224](https://github.com/BNFC/bnfc/issues/224),[#226](https://github.com/BNFC/bnfc/issues/226)]
 * OCaml: Reserved symbols now have a higher precedence than predefined
   tokens as in Haskell
-* Some updates of the documentation [#211,#223]
-* And various small fixes [#139,#159,#195,#201,#215]
+* Some updates of the documentation [[#211](https://github.com/BNFC/bnfc/issues/211),[#223](https://github.com/BNFC/bnfc/issues/223)]
+* And various small fixes [[#139](https://github.com/BNFC/bnfc/issues/139),[#159](https://github.com/BNFC/bnfc/issues/159),[#195](https://github.com/BNFC/bnfc/issues/195),[#201](https://github.com/BNFC/bnfc/issues/201),[#215](https://github.com/BNFC/bnfc/issues/215)]
