--- a/_posts/releases/2019-08-27-v2.8.3.md
+++ b/_posts/releases/2019-08-27-v2.8.3.md
@@ -14,25 +14,25 @@ Main new feature:
 Backend-independent features:
 
 * GHC 8.8 compatibility
-* Stack installation supported by provided `.yaml` files [#198]
-* Unicode support in lexer, excl. C, C++ and Ocaml [#249]
-* LBNF: support `\r` (carriage return) and `\f` (form feed) in token declaration [#257]
-* LBNF: allow numbered categories (like `Foo2`) independent of coercions [#210]
+* Stack installation supported by provided `.yaml` files [[#198](https://github.com/BNFC/bnfc/issues/198)]
+* Unicode support in lexer, excl. C, C++ and Ocaml [[#249](https://github.com/BNFC/bnfc/issues/249)]
+* LBNF: support `\r` (carriage return) and `\f` (form feed) in token declaration [[#257](https://github.com/BNFC/bnfc/issues/257)]
+* LBNF: allow numbered categories (like `Foo2`) independent of coercions [[#210](https://github.com/BNFC/bnfc/issues/210)]
 
 C backend:
 
-* supports now the `-l` option to give error locations [#238]
-* correct function names in generated skeletons [#239]
-* handle regular expression difference (subtraction) correctly [#237]
+* supports now the `-l` option to give error locations [[#238](https://github.com/BNFC/bnfc/issues/238)]
+* correct function names in generated skeletons [[#239](https://github.com/BNFC/bnfc/issues/239)]
+* handle regular expression difference (subtraction) correctly [[#237](https://github.com/BNFC/bnfc/issues/237)]
 
 Haskell backend:
 
 * generates now more fine-grained `Makefile` that invokes `bnfc` on changed `.cf` file
-* uses qualified import of AST in generated printer [fixes #128,#228]
-* printer code no longer produces deprecation warning concerning `OverlappingInstances` [#233]
-* `--cnf`: fixed problem with `Any` type in generated code [#216]
+* uses qualified import of AST in generated printer [fixes [#128](https://github.com/BNFC/bnfc/issues/128),[#228](https://github.com/BNFC/bnfc/issues/228)]
+* printer code no longer produces deprecation warning concerning `OverlappingInstances` [[#233](https://github.com/BNFC/bnfc/issues/233)]
+* `--cnf`: fixed problem with `Any` type in generated code [[#216](https://github.com/BNFC/bnfc/issues/216)]
 * `--cnf`: generated test program now same name (`Test`) as without `--cnf`
-* `--glr`: correct module header in .y file [#252]
+* `--glr`: correct module header in .y file [[#252](https://github.com/BNFC/bnfc/issues/252)]
 
 Binaries:
 * BNFC-2.8.3-mac.pkg: Binary `/usr/local/bin/bnfc` compiled under Mac OS X Mojave, x86 64bit processor
