--- a/_posts/releases/2020-10-10-v2.8.4.md
+++ b/_posts/releases/2020-10-10-v2.8.4.md
@@ -9,30 +9,30 @@ packages:
   win: bnfc-2.8.4-win.exe
 ---
 This release adds the __OCaml/Menhir__ backend, a variant of the OCaml backend that uses parser generator `menhir` instead of `ocamlyacc`.  Beyond that, the focus of this release has been increased __robustness and predictability__ of the BNFC tool:
-* New option `--check` that only performs sanity checks on the given LBNF grammar file, without calling any backend (#286).
-* New sanity checks (#186, #213, #214) and deprecation warnings.
+* New option `--check` that only performs sanity checks on the given LBNF grammar file, without calling any backend ([#286](https://github.com/BNFC/bnfc/issues/286)).
+* New sanity checks ([#186](https://github.com/BNFC/bnfc/issues/186), [#213](https://github.com/BNFC/bnfc/issues/213), [#214](https://github.com/BNFC/bnfc/issues/214)) and deprecation warnings.
 * Error messages of BNFC concerning rule or category names are now equipped with the error location.
-* Generated code systematically tries to avoid clashes with language keywords or standard library names (#278, #289).
+* Generated code systematically tries to avoid clashes with language keywords or standard library names ([#278](https://github.com/BNFC/bnfc/issues/278), [#289](https://github.com/BNFC/bnfc/issues/289)).
 * Pragma `define` now supported by all maintained backends (Agda, Haskell, Haskell/GADT, C, C++, Java).
 * Pragma `position token` now supported by all maintained backends with the exception of C++/NoSTL.
-* List separators consisting just of whitespace are now accepted. They are used in the generated printers but treated like "" in the generated parsers (#70).
+* List separators consisting just of whitespace are now accepted. They are used in the generated printers but treated like "" in the generated parsers ([#70](https://github.com/BNFC/bnfc/issues/70)).
 
 The __Haskell backend__ has seen the following improvements:
-* New option `--text-token` to use `Data.Text` instead of `String` in the generated lexer (#167).
-* Deriving `IsString` instances for `Ident`-like token types (#192).
+* New option `--text-token` to use `Data.Text` instead of `String` in the generated lexer ([#167](https://github.com/BNFC/bnfc/issues/167)).
+* Deriving `IsString` instances for `Ident`-like token types ([#192](https://github.com/BNFC/bnfc/issues/192)).
 * The `Err` monad is now defined as `Either String`.  Module `ErrM` is only generated for backwards compatibility.  Imports of `ErrM` with an explicit import list may have to modified slightly, see a migration guide at the [Haskell backend documentation](https://bnfc.readthedocs.io/en/v2.8.4/user_guide.html#haskell-backend).
 * Block comments delimiters are no longer restricted to 2 characters.
 
 The __C-family backends__ have been improved as follows:
-* C, C++, Java: Now multiple block comment forms per grammar are allowed (#202).
-* C++/STL: The parser now throws an exception when parsing fails (#288).
-* Java/JFlex: Special characters are properly escaped (#299).
-* Java/ANTLR: Start rules are generated to work around ANTLR issue #2689 (#272).
+* C, C++, Java: Now multiple block comment forms per grammar are allowed ([#202](https://github.com/BNFC/bnfc/issues/202)).
+* C++/STL: The parser now throws an exception when parsing fails ([#288](https://github.com/BNFC/bnfc/issues/288)).
+* Java/JFlex: Special characters are properly escaped ([#299](https://github.com/BNFC/bnfc/issues/299)).
+* Java/ANTLR: Start rules are generated to work around ANTLR issue [#2689](https://github.com/antlr/antlr4/issues/2689) ([#272](https://github.com/BNFC/bnfc/issues/272)).
 
-Further bug fixes: #163, #169, #196, #212, #235, #256, #264, #269, #274, #276, #277, #279, #282, #283, #290.
+Further bug fixes: [#163](https://github.com/BNFC/bnfc/issues/163), [#169](https://github.com/BNFC/bnfc/issues/169), [#196](https://github.com/BNFC/bnfc/issues/196), [#212](https://github.com/BNFC/bnfc/issues/212), [#235](https://github.com/BNFC/bnfc/issues/235), [#256](https://github.com/BNFC/bnfc/issues/256), [#264](https://github.com/BNFC/bnfc/issues/264), [#269](https://github.com/BNFC/bnfc/issues/269), [#274](https://github.com/BNFC/bnfc/issues/274), [#276](https://github.com/BNFC/bnfc/issues/276), [#277](https://github.com/BNFC/bnfc/issues/277), [#279](https://github.com/BNFC/bnfc/issues/279), [#282](https://github.com/BNFC/bnfc/issues/282), [#283](https://github.com/BNFC/bnfc/issues/283), [#290](https://github.com/BNFC/bnfc/issues/290).
 
 Building of BNFC 2.8.4 requires __GHC ≥ 7.10__ and has been tested up to GHC 8.10.2.  BNFC can be build using `cabal` or `stack` (using one of the enclosed `stack-x.y.z.yaml` files).
 
 #### Binaries:
-* BNFC-2.8.3-mac.pkg: Binary `/usr/local/bin/bnfc` compiled under Mac OS X Mojave, x86 64bit processor
-* bnfc-2.8.3-win.exe: Binary compiled under Windows 10, x86 64bit processor
+* BNFC-2.8.4-mac.pkg: Binary `/usr/local/bin/bnfc` compiled under Mac OS X Mojave, x86 64bit processor
+* bnfc-2.8.4-win.exe: Binary compiled under Windows 10, x86 64bit processor
