--- a/_posts/releases/2021-03-01-v2.9.1.md
+++ b/_posts/releases/2021-03-01-v2.9.1.md
@@ -11,16 +11,16 @@ packages:
 
 Main new feature:
 
-* Haskell: the `--functor` option now produces position-annotated ASTs [[176](https://github.com/BNFC/bnfc/issues/176),[327](https://github.com/BNFC/bnfc/issues/327)]. Thanks @Commelina!
+* Haskell: the `--functor` option now produces position-annotated ASTs [[#176](https://github.com/BNFC/bnfc/issues/176),[#327](https://github.com/BNFC/bnfc/issues/327)]. Thanks @Commelina!
 
 Bug fixes and small improvements:
 
-* Haskell: fix generated `Makefile` and test parser for `--glr` mode [[340](https://github.com/BNFC/bnfc/issues/340)]
+* Haskell: fix generated `Makefile` and test parser for `--glr` mode [[#340](https://github.com/BNFC/bnfc/issues/340)]
 * Haskell(/GADT): generated modules import `Prelude` explicitly, compatible with `{-# LANGUAGE NoImplicitPrelude #-}`
-* Haskell: generated code is warning free [[331](https://github.com/BNFC/bnfc/issues/331)]
-* Haskell: generated printer more robust wrt. identifier clashes [[337](https://github.com/BNFC/bnfc/issues/337)]
-* Haskell/C: handle token constructors in `define` expressions [[338](https://github.com/BNFC/bnfc/issues/338)]
-* Java/ANTLR: removed more superfluous quotation in lexer character sets [[329](https://github.com/BNFC/bnfc/issues/329)]
-* Ocaml: fix syntax error in generated printer [[330](https://github.com/BNFC/bnfc/issues/330)]
-* LBNF: more sanity checks [[339](https://github.com/BNFC/bnfc/issues/339)]
+* Haskell: generated code is warning free [[#331](https://github.com/BNFC/bnfc/issues/331)]
+* Haskell: generated printer more robust wrt. identifier clashes [[#337](https://github.com/BNFC/bnfc/issues/337)]
+* Haskell/C: handle token constructors in `define` expressions [[#338](https://github.com/BNFC/bnfc/issues/338)]
+* Java/ANTLR: removed more superfluous quotation in lexer character sets [[#329](https://github.com/BNFC/bnfc/issues/329)]
+* Ocaml: fix syntax error in generated printer [[#330](https://github.com/BNFC/bnfc/issues/330)]
+* LBNF: more sanity checks [[#339](https://github.com/BNFC/bnfc/issues/339)]
 * Tested with GHC 9.0
