Update Release 2.9.6.1 announcement

--- a/_posts/releases/2025-08-14-v2.9.6.1.md
+++ b/_posts/releases/2025-08-14-v2.9.6.1.md
@@ -4,8 +4,10 @@ version: 2.9.6.1
 categories:
 - releases
 packages:
+  linux64: bnfc-2.9.6.1-linux-x86_64.binary
   mac: bnfc-2.9.6.1-mac.pkg
   source: BNFC-2.9.6.1.tar.gz
+  win: bnfc-2.9.6.1-win.exe
 ---
 
 * Haskell: restore `LANGUAGE DeriveDataTypeable` in generated `Abs.hs`;
